<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view_home"
        android:title="@string/title_section_home" />
    <item
        android:id="@+id/action_view_all_users"
        android:title="@string/title_section_all_users" />
    <item
        android:id="@+id/action_view_star_users"
        android:title="@string/title_section_star_users" />
    <item
        android:id="@+id/action_edit_profile"
        android:title="@string/title_section_profile" />
    <item
        android:id="@+id/action_change_password"
        android:title="@string/title_section_password" />
    <item
        android:id="@+id/action_view_oss_license"
        android:title="@string/title_section_oss_license" />
</menu>
